--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,react,yarn
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,react,yarn
 
+### dotenv ###
+.env
+
 ### Node ###
 # Logs
 logs
